--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 DB_URI="mongodb+srv://rinkiyadav7817:1MTELXaN7AGdA28E@wevdev.ytgnhkm.mongodb.net/shopping-cart?retryWrites=true&w=majority"
-
+Node_VERSION=16.18.0
 PORT = 3000
 SESSION_SECRET="2F553446F9268"
